# tenx

./: .gitignore  .tenx.ron  .tenx.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  MCP.md  README.md  TODO.md
crates/libtenx/: Cargo.toml
crates/libtenx/prompts/: claude_system.txt
crates/libtenx/src/: changes.rs  checks.rs  claude.rs  config.rs  context.rs  crateops.rs  error.rs  event_consumers.rs  events.rs  exec.rs  formatters.rs  lib.rs  operations.rs  patch.rs  pretty.rs  prompt.rs  query.rs  response.rs  session.rs  session_store.rs  state.rs  tenx.rs  testutils.rs  throttle.rs  trial.rs  validators.rs  workspace.rs
crates/libtenx/src/action/: code.rs  core.rs  fix.rs  mod.rs
crates/libtenx/src/checks/: builtin.rs  check.rs  mod.rs  rust.rs  shell.rs
crates/libtenx/src/config/: config.rs  defaults.rs  files.rs  mod.rs
crates/libtenx/src/context/: cmd.rs  manager.rs  mod.rs  path.rs  project_map.rs  ruskel.rs  text.rs  url.rs
crates/libtenx/src/dialect/: dummy_dialect.rs  mod.rs  tags-edit.txt  tags-replace.txt  tags-smart.txt  tags-system.txt  tags-udiff.txt  tags.rs  tags_test.rs  xmlish.rs
crates/libtenx/src/dialect/examples/: a-result.rs
crates/libtenx/src/formatters/: mod.rs  rust.rs
crates/libtenx/src/lang/: python.rs  rust.rs
crates/libtenx/src/model/: claude.rs  claude_editor.rs  conversation.rs  dummy.rs  dummy_model.rs  google.rs  mod.rs  openai.rs
crates/libtenx/src/model/tags/: mod.rs  tags-system.txt  tags.rs  tags_test.rs  xmlish.rs
crates/libtenx/src/model/tags/examples/: a-editable.rs
crates/libtenx/src/patch/: mod.rs  replace.rs  smart.rs  udiff.rs  write.rs
crates/libtenx/src/render/: mod.rs  term.rs
crates/libtenx/src/state/: abspath.rs  directory.rs  files.rs  memory.rs  mod.rs
crates/libtenx/src/state/patch/: replace.rs  write.rs
crates/libtenx/src/strategy/: code.rs  core.rs  mod.rs
crates/libtenx/src/validators/: builtin.rs  mod.rs  python.rs  rust.rs  shell.rs
crates/libtenx/templates/: action.md  code.md  code_step.md
crates/libttrial/: Cargo.toml
crates/libttrial/src/: lib.rs  report.rs  trial.rs
crates/state/: .tenx.ron  Cargo.toml
crates/state/src/: abspath.rs  directory.rs  error.rs  files.rs  lib.rs  memory.rs
crates/state/src/patch/: insert.rs  mod.rs  replace.rs  replace_fuzzy.rs
crates/tenx/: Cargo.toml
crates/tenx/src/: edit.rs  main.rs  pretty.rs  skin.rs
crates/ttrial/: Cargo.toml
crates/ttrial/src/: main.rs
crates/unirend/: Cargo.toml
crates/unirend/src/: lib.rs  markdown.rs  term.rs
samples/: .gitignore  simple-fib
samples/python/: simple.py
samples/simple/: Cargo.toml
samples/simple/src/: lib.rs
scripts/: run-trial
trials/: .gitignore  README.md  python-evenmedian-fix-blind.ron  python-evenmedian-fix.ron  python-evenmedian.ron  rust-ask-blind.toml  rust-ask-editable.toml  rust-ask.toml  rust-evenmedian-blind.ron  rust-evenmedian-blind.toml  rust-evenmedian-fix.ron  rust-evenmedian-fix.toml  rust-evenmedian.ron  rust-evenmedian.toml  rust-fix-blind.ron  rust-fix-blind.toml  rust-fix.ron  rust-fix.toml  rust-gridarea-easy.ron  rust-gridarea-hard.ron  rust-gridarea-medium.ron  rust-gridarea.ron  simple-edit.toml  simple.toml
trials/projects/: .tenx.ron
trials/projects/python/evenmedian/: evenmedian.py  pyproject.toml  tests.py
trials/projects/rust/broken/: Cargo.toml
trials/projects/rust/broken/src/: lib.rs
trials/projects/rust/evenmedian/src/: code.rs  validation.rs
trials/projects/rust/grid-impl/src/: code.rs
trials/projects/rust/gridarea-easy/: Cargo.toml
trials/projects/rust/gridarea-easy/src/: code.rs  validation.rs
trials/projects/rust/gridarea-hard/src/: code.rs  validation.rs
trials/projects/rust/gridarea-medium/src/: validation.rs
trials/projects/rust/gridarea/src/: code.rs  validation.rs
trials/projects/rust/simple/: Cargo.toml
trials/projects/simple/: Cargo.toml
