[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "An AI-assisted coding tool"
license = "MIT"
repository = "https://github.com/cortesi/tenx"
keywords = ["ai", "claude", "sonnet", "chatgpt", "openai"]

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
libtenx = { version = "0.1.0", path = "crates/libtenx" }
