[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "An AI-assisted coding tool"
license = "MIT"
repository = "https://github.com/cortesi/tenx"
keywords = ["ai", "claude", "sonnet", "chatgpt", "openai"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
libtenx = { version = "0.0.3", path = "crates/libtenx" }
libruskel = { version = "0.0.9" }
