[package]
name = "libtenx"
edition = "2021"

version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
misanthropy = { path = "../../../misanthropy/crates/misanthropy" }
libruskel = { path = "../../../ruskel/crates/libruskel" }

tempfile = "3.11.0"
thiserror = "1.0.63"
tracing = "0.1.40"
serde = { version = "1.0.205", features = ["derive"] }
tokio = {version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
dirs = "5.0.1"
serde_json = "1.0.124"
pathdiff = "0.2.1"
toml = { version = "0.8.19", features = ["display"] }
diffy = "0.4.0"
fs-err = "3.0.0"
globset = "0.4.14"
serde_variant = "0.1.3"
heck = "0.5.0"
fs_extra = "1.3.0"
normalize-path = "0.2.1"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
