[package]
name = "libtenx"
edition = "2021"
description ="A library for building AI-assisted coding tools, with session management, patch validation, and multiple model support."

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]

tempfile = "3.11.0"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
serde = { version = "1.0.205", features = ["derive"] }
tokio = {version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
dirs = "5.0.1"
serde_json = "1.0.124"
pathdiff = "0.2.1"
diffy = "0.4.0"
fs-err = "3.0.0"
globset = "0.4.14"
serde_variant = "0.1.3"
heck = "0.5.0"
fs_extra = "1.3.0"
normalize-path = "0.2.1"
glob = "0.3.1"
colored = "2.1.0"
indicatif = "0.17.9"
async-openai = "0.26.0"
reqwest = "0.12.9"
futures-util = "0.3.31"
textwrap = "0.16"
ron = "0.8.1"
optional_struct = "0.5.2"
libruskel = { workspace=true }
misanthropy = "0.0.7"
termsize = "0.1.9"
path-clean = "1.0.1"
googleapis-tonic-google-ai-generativelanguage-v1 = "0.15.0"
tonic = { version = "0.12.3", features = ["tls", "channel"] }
http-body = "1.0.1"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"