[package]
name = "libtenx"
edition = "2021"
description ="A library for building AI-assisted coding tools, with session management, patch validation, and multiple model support."

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]

unirend = { path = "../unirend" }
state = { path = "../state" }

#misanthropy = { path = "../../../misanthropy/crates/misanthropy" }
misanthropy = "0.0.8"

# google-genai = { path = "../../../google-genai" }
google-genai = "0.0.2"

tempfile = "3.11.0"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
serde = { version = "1.0.205", features = ["derive"] }
tokio = {version = "1.39.2", features = ["full"] }
async-trait = "0.1.81"
dirs = "6.0.0"
serde_json = "1.0.124"
pathdiff = "0.2.1"
diffy = "0.4.0"
fs-err = "3.0.0"
globset = "0.4.14"
serde_variant = "0.1.3"
heck = "0.5.0"
glob = "0.3.1"
colored = "3.0.0"
indicatif = "0.17.9"
async-openai = "0.28.0"
reqwest = "0.12.9"
futures-util = "0.3.31"
textwrap = { version = "0.16", features = ["terminal_size"] }
ron = "0.10.0"
optional_struct = "0.5.2"
libruskel = { workspace=true }
path-clean = "1.0.1"
ignore = "0.4.23"
strip-ansi-escapes = "0.2.0"
enum_dispatch = "0.3.13"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
