[package]
name = "libttrial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
fs_extra = "1.3.0"
glob = "0.3.1"
libtenx = { workspace=true }
optional_struct = "0.5.2"
ron = "0.10.0"
serde = "1.0.215"
tempfile = "3.14.0"
tokio = "1.41.1"
tracing = "0.1.40"
