[package]
name = "state"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
unirend = { path = "../unirend" }

diffy = "0.4.2"
globset = "0.4.16"
ignore = "0.4.23"
indoc = "2.0.6"
path-clean = "1.0.1"
pathdiff = "0.2.3"
pretty_assertions = "1.4.1"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.0"
thiserror = "2.0.12"
