[package]
name = "tenx"
edition = "2021"

version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive", "env"] }
colored = "2.1.0"
indoc = "2.0.5"
libtenx = { workspace=true }
pretty_assertions = "1.4.0"
serde_json = "1.0"
tempfile = "3.12.0"
terminal_size = "0.3.0"
textwrap = "0.16.1"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
indoc = "2.0.5"
