[package]
name = "tenx"
edition = "2021"
description = "An AI-assisted coding tool"

version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
unirend = { path = "../unirend" }

anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive", "env", "wrap_help"] }
colored = "3.0.0"
libtenx = { workspace=true }
sigpipe = "0.1.3"
tempfile = "3.12.0"
tokio = { version = "1.39.2" }
tracing-subscriber = "0.3.18"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.0"
