[package]
name = "ttrial"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
libtenx = { path = "../libtenx" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
tokio = { version = "1.32" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
textwrap = "0.16"
indicatif = "0.17"