
[package]
name = "unirend"
description ="A simple unified rendering interface with output to terminal and markdown."

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

[dependencies]
colored = "3.0.0"
terminal_size = "0.4.2"
textwrap = "0.16.2"
